--- a/fs/index.html
+++ b/fs/index.html
@@ -165,7 +165,7 @@
     </div>
 
     <div class="container" id="wifi_container" style="visibility: hidden">
-      <h1 class="">WiFi config</h1>
+      <h1 class="">WiFi Setup 1</h1>
       <div class="form">
         <div class="">
           <div class="form-control">
